removed Kevin's old stuff, all pieces are in upnp

--- a/buildroot-upnp/upnp_defconfig
+++ b/buildroot-upnp/upnp_defconfig
@@ -36,3 +36,4 @@ BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/busybox.con
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_UPNP_PATH)/overlay"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_UPNP_PATH)/patches"
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_UPNP_PATH)/users.txt"
+BR2_PACKAGE_RAAT=y
