--- a/buildroot-upnp/colibri_imx7_defconfig
+++ b/buildroot-upnp/colibri_imx7_defconfig
@@ -15,9 +15,9 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-eval-v3"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_TARGET_ROOTFS_TAR_XZ=y
-BR2_TARGET_ROOTFS_UBIFS=y
-BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x20000
-BR2_TARGET_ROOTFS_UBIFS_XZ=y
+# BR2_TARGET_ROOTFS_UBIFS=y
+# BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x20000
+# BR2_TARGET_ROOTFS_UBIFS_XZ=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
