--- a/buildroot-upnp/overlay/opt/roon/config.json
+++ b/buildroot-upnp/overlay/opt/roon/config.json
@@ -1,14 +1,15 @@
 {
   "vendor": "Musica Pristina",
-  "model": "A Cappella III",
+  "model": "A Cappella II",
   "serial": "NOT SET",
   "version": "01.01.1004",
   "unique_id": "76a134fc-b1ae-4c90-8d59-0dac01222019",
   "config_url": "http://__SELF__/",
   "output": {
     "type": "alsa",
-    "device": "hw:CARD=imx7mp,DEV=0",
+    "device": "hw:0,0",
     "buffer_duration": 0.040,
+    "dsd_mode":"dop",
     "signal_path": [
       {
         "quality": "lossless",
@@ -17,5 +18,7 @@
       }
     ]
   },
-  "volume": { "type": "none" }
+  "volume": {
+    "type": "none"
+  }
 }
