--- a/buildroot-upnp/upnp_defconfig
+++ b/buildroot-upnp/upnp_defconfig
@@ -34,6 +34,8 @@ BR2_TARGET_GENERIC_HOSTNAME="musicapristina"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Musica Pristina"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/busybox.configfrag"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_UPNP_PATH)/overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_UPNP_PATH)/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_UPNP_PATH)/post_image.sh"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_UPNP_PATH)/patches"
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_UPNP_PATH)/users.txt"
 BR2_PACKAGE_RAAT=y
