--- a/buildroot-upnp/overlay/opt/mp/config.json
+++ b/buildroot-upnp/overlay/opt/mp/config.json
@@ -4,7 +4,7 @@
     "email": "",
     "serialNumber": "",
     "purchaseDate": "",
-    "deviceID": "76a134fc-b1ae-4c90-8d59-0dac01222003",
+    "deviceID": "",
     "firmwareVersion": "003.001.1001",
     "model": "A Cappella II",
     "networkType": 2,
