--- a/buildroot-upnp/configs/mp_defconfig
+++ b/buildroot-upnp/configs/mp_defconfig
@@ -16,7 +16,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="imx_v6_v7"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/board/colibri-imx7/linux.configfrag"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-mp"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-eval-v3"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/busybox.configfrag"
 BR2_PACKAGE_ALSA_UTILS=y
