project with reset ALSA drive in buildroot source

--- a/buildroot-upnp/configs/mp_defconfig
+++ b/buildroot-upnp/configs/mp_defconfig
@@ -49,7 +49,6 @@ BR2_PACKAGE_HAVEGED=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_NANO=y
-BR2_TARGET_ROOTFS_TAR_XZ=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
@@ -62,3 +61,4 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nand.imx"
 BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_RAAT=y
+BR2_PACKAGE_MPCODEC=y
