dummy device id

--- a/buildroot-upnp/overlay/opt/mp/config.json
+++ b/buildroot-upnp/overlay/opt/mp/config.json
@@ -4,7 +4,7 @@
     "email": "",
     "serialNumber": "",
     "purchaseDate": "",
-    "deviceID": "",
+    "deviceID": "69c312ee-f097-4dd4-bade-03d1cfd0eb09",
     "firmwareVersion": "003.001.1001",
     "model": "A Cappella II",
     "networkType": 2,
