network mgmt and roon config source selection fix

--- a/buildroot-upnp/overlay/opt/roon/config.json
+++ b/buildroot-upnp/overlay/opt/roon/config.json
@@ -22,6 +22,7 @@
     "type": "none"
   },
   "source_selection": {
-    "type":"test"
+    "type":"mp",
+    "source_selection_command": "source_selection"
   }
 }
