--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -2,24 +2,24 @@ BR2_arm=y
 BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_CCACHE=y
-BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_UPNP_PATH)/patches"
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_MP_AUDIO_PATH)/patches"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LINARO_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="musicapristina"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Musica Pristina"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
-BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_UPNP_PATH)/users.txt"
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_UPNP_PATH)/overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_UPNP_PATH)/post_build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_UPNP_PATH)/post_image.sh"
+BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/users.txt"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_MP_AUDIO_PATH)/overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_MP_AUDIO_PATH)/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_MP_AUDIO_PATH)/post_image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="imx_v6_v7"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/board/colibri-imx7/linux.configfrag"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/board/colibri-imx7/linux.configfrag"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-eval-v3"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
-BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_UPNP_PATH)/busybox.configfrag"
+BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/busybox.configfrag"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
