--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -27,9 +27,34 @@ BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_FAAD2=y
-BR2_PACKAGE_FFMPEG=y
-BR2_PACKAGE_FLAC=y
 BR2_PACKAGE_GMRENDER_RESURRECT=y
+BR2_PACKAGE_GSTREAMER1_MM=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOMIXER=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORATE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ENCODING=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OVERLAYCOMPOSITION=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_RAWPARSE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_SUBPARSE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VORBIS=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUPARSE=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEBUGUTILS=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_UDP=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVENC=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MPG123=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLAC=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK=y
+BR2_PACKAGE_GST1_LIBAV=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_NODEJS=y
@@ -43,7 +68,6 @@ BR2_PACKAGE_LIBREPLAYGAIN=y
 BR2_PACKAGE_LIBSAMPLERATE=y
 BR2_PACKAGE_LIBSNDFILE=y
 BR2_PACKAGE_LIBSOXR=y
-BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_OPUS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBGPIOD=y
