MP Driver + audio stopping

--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -5,9 +5,10 @@ BR2_CCACHE=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_MP_AUDIO_PATH)/patches"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LINARO_ARM=y
-BR2_TARGET_GENERIC_HOSTNAME="musicapristina"
+BR2_TARGET_GENERIC_HOSTNAME="mp"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Musica Pristina"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
+# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/users.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_MP_AUDIO_PATH)/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_MP_AUDIO_PATH)/post_build.sh"
@@ -27,8 +28,9 @@ BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_FAAD2=y
+BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_SWSCALE=y
 BR2_PACKAGE_GMRENDER_RESURRECT=y
-BR2_PACKAGE_GSTREAMER1_MM=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOMIXER=y
@@ -53,10 +55,11 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_UDP=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVENC=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MPG123=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLAC=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK=y
-BR2_PACKAGE_GST1_LIBAV=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_MTD=y
+BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_NODEJS=y
 BR2_PACKAGE_NODEJS_NPM=y
 BR2_PACKAGE_AUDIOFILE=y
@@ -76,10 +79,15 @@ BR2_PACKAGE_JSONCPP=y
 BR2_PACKAGE_LIBMICROHTTPD=y
 BR2_PACKAGE_LIBUPNPP=y
 BR2_PACKAGE_BOOST=y
+BR2_PACKAGE_GLIBMM=y
 BR2_PACKAGE_HAVEGED=y
+BR2_PACKAGE_AVAHI=y
+BR2_PACKAGE_AVAHI_DAEMON=y
+BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_IFPLUGD=y
+BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
