--- a/audio/overlay/opt/mp/config.json
+++ b/audio/overlay/opt/mp/config.json
@@ -16,7 +16,7 @@
         "email": "kwelsh@welshtechnologies.com",
         "serial_number": "123",
         "purchase_date": "1/1/2019",
-        "device_id": "69c312ee-f097-4dd4-bade-03d1cfd0eb09",
+        "device_id": "",
         "firmware": "003.001.1001",
         "model": "A Cappella II"
     }
