many updates for eMMC

--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -9,6 +9,8 @@ BR2_TARGET_GENERIC_HOSTNAME="mp"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Musica Pristina"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_LOCALTIME="America/New_York"
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/users.txt"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_MP_AUDIO_PATH)/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_MP_AUDIO_PATH)/post_build.sh"
@@ -17,8 +19,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="imx_v6_v7"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/board/colibri-imx7/linux.configfrag"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-eval-v3"
-BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="imx7d-colibri-emmc-eval-v3"
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_MP_AUDIO_PATH)/configs/busybox.configfrag"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
@@ -28,7 +29,7 @@ BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_FAAD2=y
-BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_FFPROBE=y
 BR2_PACKAGE_FFMPEG_SWSCALE=y
 BR2_PACKAGE_GMRENDER_RESURRECT=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
@@ -57,48 +58,62 @@ BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MPG123=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLAC=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK=y
+BR2_PACKAGE_MPD=y
+BR2_PACKAGE_MPD_SOUNDCLOUD=y
+BR2_PACKAGE_MPD_DSD=y
+BR2_PACKAGE_MPD_FFMPEG=y
+BR2_PACKAGE_MPD_FLAC=y
+BR2_PACKAGE_MPD_VORBIS=y
+BR2_PACKAGE_MPD_WAVPACK=y
+BR2_PACKAGE_MPD_LIBSMBCLIENT=y
+BR2_PACKAGE_MPD_AVAHI_SUPPORT=y
+BR2_PACKAGE_MPD_LIBMPDCLIENT=y
+BR2_PACKAGE_MPD_UPNP=y
+BR2_PACKAGE_MPD_MPC=y
+BR2_PACKAGE_UPMPDCLI=y
 BR2_PACKAGE_GIT=y
+BR2_PACKAGE_CIFS_UTILS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_NODEJS=y
 BR2_PACKAGE_NODEJS_NPM=y
 BR2_PACKAGE_AUDIOFILE=y
 BR2_PACKAGE_LIBCUEFILE=y
-BR2_PACKAGE_LIBID3TAG=y
-BR2_PACKAGE_LIBMAD=y
-BR2_PACKAGE_LIBMPDCLIENT=y
 BR2_PACKAGE_LIBREPLAYGAIN=y
 BR2_PACKAGE_LIBSAMPLERATE=y
 BR2_PACKAGE_LIBSNDFILE=y
 BR2_PACKAGE_LIBSOXR=y
 BR2_PACKAGE_OPUS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_LIBGPIOD=y
 BR2_PACKAGE_LIBGPIOD_TOOLS=y
-BR2_PACKAGE_JSONCPP=y
-BR2_PACKAGE_LIBMICROHTTPD=y
-BR2_PACKAGE_LIBUPNPP=y
-BR2_PACKAGE_BOOST=y
 BR2_PACKAGE_GLIBMM=y
 BR2_PACKAGE_HAVEGED=y
-BR2_PACKAGE_AVAHI=y
-BR2_PACKAGE_AVAHI_DAEMON=y
-BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
+BR2_PACKAGE_CONNMAN=y
+BR2_PACKAGE_CONNMAN_WIFI=y
+BR2_PACKAGE_CONNMAN_BLUETOOTH=y
+BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_IFPLUGD=y
+BR2_PACKAGE_SHAIRPORT_SYNC=y
+BR2_PACKAGE_TIME=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_NANO=y
+BR2_TARGET_ROOTFS_EXT2=y
+BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="1024M"
+BR2_TARGET_ROOTFS_EXT2_MKFS_OPTIONS="-O ^64bit -t ext4"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="git://git.toradex.com/u-boot-toradex.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="2016.11-toradex"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="colibri_imx7"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="colibri_imx7_emmc"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
-BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
-BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-nand.imx"
+BR2_TARGET_UBOOT_FORMAT_IMX=y
 BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_RAAT=y
 BR2_PACKAGE_MPCODEC=y
