build scripts. kernel fix for mdev automount. init script updates

--- a/audio/overlay/opt/mpd/mpd.conf
+++ b/audio/overlay/opt/mpd/mpd.conf
@@ -41,7 +41,7 @@ decoder {
 }
 
 audio_output {
-    name                "bcm2835 ALSA"
+    name                "MP I2S + AES/EBU + AES3id + S/PDIF"
     type                "alsa"
     device              "hw:0,0"
     auto_resample       "no"
