--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -29,33 +29,6 @@ BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_FAAD2=y
 BR2_PACKAGE_FFMPEG_FFPROBE=y
 BR2_PACKAGE_FFMPEG_SWSCALE=y
-BR2_PACKAGE_GMRENDER_RESURRECT=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ADDER=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOMIXER=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIORATE=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_AUDIOTESTSRC=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ENCODING=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_GIO=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OVERLAYCOMPOSITION=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_RAWPARSE=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_SUBPARSE=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_TCP=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VORBIS=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOPARSERS=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUPARSE=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_DEBUGUTILS=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_UDP=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVENC=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MPG123=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_FLAC=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_SOUPHTTPSRC=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_WAVPACK=y
 BR2_PACKAGE_MPD=y
 BR2_PACKAGE_MPD_SOUNDCLOUD=y
 BR2_PACKAGE_MPD_DSD=y
@@ -63,11 +36,13 @@ BR2_PACKAGE_MPD_FFMPEG=y
 BR2_PACKAGE_MPD_FLAC=y
 BR2_PACKAGE_MPD_VORBIS=y
 BR2_PACKAGE_MPD_WAVPACK=y
+BR2_PACKAGE_MPD_LIBNFS=y
 BR2_PACKAGE_MPD_LIBSMBCLIENT=y
 BR2_PACKAGE_MPD_AVAHI_SUPPORT=y
 BR2_PACKAGE_MPD_LIBMPDCLIENT=y
 BR2_PACKAGE_MPD_UPNP=y
 BR2_PACKAGE_MPD_MPC=y
+BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_UPMPDCLI=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_CIFS_UTILS=y
@@ -80,12 +55,13 @@ BR2_PACKAGE_LIBCUEFILE=y
 BR2_PACKAGE_LIBREPLAYGAIN=y
 BR2_PACKAGE_LIBSAMPLERATE=y
 BR2_PACKAGE_LIBSNDFILE=y
-BR2_PACKAGE_LIBSOXR=y
 BR2_PACKAGE_OPUS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_LIBGPIOD=y
 BR2_PACKAGE_LIBGPIOD_TOOLS=y
+BR2_PACKAGE_LIBSOUP=y
+BR2_PACKAGE_LIBUPNP=y
 BR2_PACKAGE_GLIBMM=y
 BR2_PACKAGE_HAVEGED=y
 BR2_PACKAGE_CONNMAN=y
@@ -95,6 +71,7 @@ BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_SHAIRPORT_SYNC=y
+BR2_PACKAGE_SHAIRPORT_SYNC_LIBSOXR=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_EXT2=y
