courtesy switching support

--- a/audio/overlay/opt/shairport-sync/shairport-sync.conf
+++ b/audio/overlay/opt/shairport-sync/shairport-sync.conf
@@ -1,49 +1,65 @@
 general =
 {
+    name = "%h";
     output_backend = "alsa";
+    mdns_backend = "avahi"
 };
-metadata =
+sessioncontrol =
 {
-    enabled = "yes";
-    include_cover_art = "yes";
-    pipe_name = "/opt/metadata/shairport-sync";
+//      run_this_before_play_begins = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
+//      run_this_after_play_ends = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
+//      wait_for_completion = "no"; // set to "yes" to get Shairport Sync to wait until the "run_this..." applications have terminated before continuing
+//      allow_session_interruption = "no"; // set to "yes" to allow another device to interrupt Shairport Sync while it's playing from an existing audio source
+//      session_timeout = 120; // wait for this number of seconds after a source disappears before terminating the session and becoming available again.
 };
 alsa =
 {
-    output_device = "default";
-    //	mixer_control_name = "PCM";
+        output_device = "hw:2,0"; // the name of the alsa output device. Use "alsamixer" or "aplay" to find out the names of devices, mixers, etc.
+//      mixer_control_name = "PCM"; // the name of the mixer to use to adjust output volume. If not specified, volume in adjusted in software.
+//      mixer_device = "default"; // the mixer_device default is whatever the output_device is. Normally you wouldn't have to use this.
+//      output_rate = 44100; // can be 44100, 88200, 176400 or 352800, but the device must have the capability.
+//      output_format = "S16"; // can be "U8", "S8", "S16", "S24", "S24_3LE", "S24_3BE" or "S32", but the device must have the capability. Except where stated using (*LE or *BE), endianness matches that of the processor.
 };
-
-// Advanced parameters for controlling how Shairport Sync stays active and how it runs a session
-sessioncontrol =
+// Parameters for the "sndio" audio back end. All are optional.
+sndio =
 {
-//	run_this_before_play_begins = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
-//	run_this_after_play_ends = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
-//	"active" state starts when play begins and ends when the active_state_timeout has elapsed after play ends, unless another play session starts before the timeout has fully elapsed.
-//	run_this_before_entering_active_state = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
-//	run_this_after_exiting_active_state = "/full/path/to/application and args"; // make sure the application has executable permission. If it's a script, include the shebang (#!/bin/...) on the first line
-//	active_state_timeout = 10.0; // wait for this number of seconds after play ends before leaving the active state, unless another play session begins.
-//	run_this_if_an_unfixable_error_is_detected = "/full/path/to/application and args"; // if a problem occurs that can't be cleared by Shairport Sync itself, hook a program on here to deal with it. An error code-string is passed as the last argument.
-//	  Many of these "unfixable" problems are caused by malfunctioning output devices, and sometimes it is necessary to restart the whole device to clear the problem.
-//	  You could hook on a program to do this automatically, but beware -- the device may then power off and restart without warning!
-//	wait_for_completion = "no"; // set to "yes" to get Shairport Sync to wait until the "run_this..." applications have terminated before continuing
-//	allow_session_interruption = "no"; // set to "yes" to allow another device to interrupt Shairport Sync while it's playing from an existing audio source
-//	session_timeout = 120; // wait for this number of seconds after a source disappears before terminating the session and becoming available again.
+//      device = "snd/0"; // optional setting to set the name of the output device. Default is the sndio system default.
+//      rate = 44100; // optional setting  which can be 44100, 88200, 176400 or 352800, but the device must have the capability. Default is 44100.
+//      format = "S16"; // optional setting  which can be "U8", "S8", "S16", "S24", "S24_3LE", "S24_3BE" or "S32", but the device must have the capability. Except where stated using (*LE or *BE), endianness matches that of the processor.
+//      round = <number>; // advanced optional setting to set the period size near to this value
+//      bufsz = <number>; // advanced optional setting to set the buffer size near to this value
 };
-
-// How to deal with metadata, including artwork
-// For this section to be operative, Shairport Sync must be built with at one (or more) of the following configuration flags:
-// --with-metadata, --with-dbus-interface, --with-mpris-interface or --with-mqtt-client.
-// In those cases, "enabled" and "include_cover_art" will both be "yes" by default
-
+// Parameters for the "pa" PulseAudio  backend.
+pa =
+{
+//      application_name = "Shairport Sync"; //Set this to the name that should appear in the Sounds "Applications" tab when Shairport Sync is active.
+};
+// Parameters for the "pipe" audio back end, a back end that directs raw CD-style audio output to a pipe. No interpolation is done.
+pipe =
+{
+//      name = "/path/to/pipe"; // there is no default pipe name for the output
+};
+dsp =
+{
+//      loudness = "yes";                     // Activate the filter
+//      loudness_reference_volume_db = -20.0; // Above this level the filter will have no effect anymore. Below this level it will gradually boost the low frequencies.
+};
 metadata =
 {
-//	enabled = "yes"; // set this to yes to get Shairport Sync to solicit metadata from the source and to pass it on via a pipe
-//	include_cover_art = "yes"; // set to "yes" to get Shairport Sync to solicit cover art from the source and pass it via the pipe. You must also set "enabled" to "yes".
-//	cover_art_cache_directory = "/tmp/shairport-sync/.cache/coverart"; // artwork will be  stored in this directory if the dbus or MPRIS interfaces are enabled or if the MQTT client is in use. Set it to "" to prevent caching, which may be useful on some systems
-//	pipe_name = "/tmp/shairport-sync-metadata";
-//	pipe_timeout = 5000; // wait for this number of milliseconds for a blocked pipe to unblock before giving up
-//	socket_address = "226.0.0.1"; // if set to a host name or IP address, UDP packets containing metadata will be sent to this address. May be a multicast address. "socket-port" must be non-zero and "enabled" must be set to yes"
-//	socket_port = 5555; // if socket_address is set, the port to send UDP packets to
-//	socket_msglength = 65000; // the maximum packet size for any UDP metadata. This will be clipped to be between 500 or 65000. The default is 500.
+        enabled = "yes"; // set this to yes to get Shairport Sync to solicit metadata from the source and to pass it on via a pipe
+        include_cover_art = "yes"; // set to "yes" to get Shairport Sync to solicit cover art from the source and pass it via the pipe. You must also set "enabled" to "yes".
+        pipe_name = "/opt/shairport-sync/shairport-sync-metadata";
+//      pipe_timeout = 5000; // wait for this number of milliseconds for a blocked pipe to unblock before giving up
+//      socket_address = "226.0.0.1"; // if set to a host name or IP address, UDP packets containing metadata will be sent to this address. May be a multicast address. "socket-port" must be non-zero and "enabled" must be set to yes"
+//      socket_port = 5555; // if socket_address is set, the port to send UDP packets to
+//      socket_msglength = 65000; // the maximum packet size for any UDP metadata. This will be clipped to be between 500 or 65000. The default is 500.
+};
+diagnostics =
+{
+//      disable_resend_requests = "no"; // set this to yes to stop Shairport Sync from requesting the retransmission of missing packets. Default is "no".
+//      statistics = "no"; // set to "yes" to print statistics in the log
+//      log_verbosity = 0; // "0" means no debug verbosity, "3" is most verbose.
+//      log_show_time_since_startup = "no"; // set this to yes if you want the time since startup in the debug message -- seconds down to nanoseconds
+//      log_show_time_since_last_message = "no"; // set this to yes if you want the time since the last debug message in the debug message -- seconds down to nanoseconds
+//      drop_this_fraction_of_audio_packets = 0.0; // use this to simulate a noisy network where this fraction of UDP packets are lost in transmission. E.g. a value of 0.001 would mean an average of 0.1% of packets are lost, which is actually quite a high figure.
 };
