--- a/audio/configs/mp_defconfig
+++ b/audio/configs/mp_defconfig
@@ -26,14 +26,21 @@ BR2_PACKAGE_ALSA_UTILS_ALSACONF=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
-BR2_PACKAGE_FAAD2=y
 BR2_PACKAGE_FFMPEG_FFPROBE=y
 BR2_PACKAGE_FFMPEG_SWSCALE=y
 BR2_PACKAGE_MPD=y
+BR2_PACKAGE_MPD_SQLITE=y
 BR2_PACKAGE_MPD_SOUNDCLOUD=y
+BR2_PACKAGE_MPD_LIBSOXR=y
+BR2_PACKAGE_MPD_AUDIOFILE=y
 BR2_PACKAGE_MPD_DSD=y
+BR2_PACKAGE_MPD_FAAD2=y
 BR2_PACKAGE_MPD_FFMPEG=y
 BR2_PACKAGE_MPD_FLAC=y
+BR2_PACKAGE_MPD_LIBSNDFILE=y
+BR2_PACKAGE_MPD_MPG123=y
+BR2_PACKAGE_MPD_MUSEPACK=y
+BR2_PACKAGE_MPD_OPUS=y
 BR2_PACKAGE_MPD_VORBIS=y
 BR2_PACKAGE_MPD_WAVPACK=y
 BR2_PACKAGE_MPD_LIBNFS=y
@@ -42,7 +49,6 @@ BR2_PACKAGE_MPD_AVAHI_SUPPORT=y
 BR2_PACKAGE_MPD_LIBMPDCLIENT=y
 BR2_PACKAGE_MPD_UPNP=y
 BR2_PACKAGE_MPD_MPC=y
-BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_UPMPDCLI=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_CIFS_UTILS=y
@@ -50,12 +56,7 @@ BR2_PACKAGE_MTD=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_NODEJS=y
 BR2_PACKAGE_NODEJS_NPM=y
-BR2_PACKAGE_AUDIOFILE=y
-BR2_PACKAGE_LIBCUEFILE=y
-BR2_PACKAGE_LIBREPLAYGAIN=y
 BR2_PACKAGE_LIBSAMPLERATE=y
-BR2_PACKAGE_LIBSNDFILE=y
-BR2_PACKAGE_OPUS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_REDIS=y
 BR2_PACKAGE_LIBGPIOD=y
