--- a/audio/overlay/opt/mpd/mpd.conf
+++ b/audio/overlay/opt/mpd/mpd.conf
@@ -5,8 +5,8 @@
 ###################################
 
 zeroconf_enabled        "yes"
-zeroconf_name           "runeaudio"
-log_level 		"verbose"
+zeroconf_name           "mp"
+log_level 		        "disabled"
 bind_to_address         "/opt/mpd/mpd.sock"
 bind_to_address         "any"
 port                    "6600"
@@ -16,7 +16,7 @@ max_connections         "20"
 db_file                 "/opt/mpd/mpd.db"
 sticker_file            "/opt/mpd/sticker.sql"
 log_file                "/opt/mpd/mpd.log"
-pid_file                "/var/run/mpd/mpd.pid"
+pid_file                "/var/run/mpd.pid"
 music_directory         "/mnt/MPD"
 playlist_directory      "/opt/mpd/playlists"
 state_file              "/opt/mpd/mpdstate"
