--- a/audio/overlay/opt/redis/redis.conf
+++ b/audio/overlay/opt/redis/redis.conf
@@ -156,7 +156,7 @@ supervised no
 #
 # Creating a pid file is best effort: if Redis is not able to create it
 # nothing bad happens, the server will start and run normally.
-pidfile /var/run/redis_6379.pid
+pidfile /var/run/redis/redis_6379.pid
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -216,9 +216,9 @@ always-show-logo yes
 #
 #   save ""
 
-save 900 1
-save 300 10
-save 60 10000
+save 60 1
+save 15 10
+save 10 10000
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
